# FastSnake

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
fastsnake/: __init__.py  __main__.py  application.py  entries.py
fastsnake/algorithms/: binary_search.py  extended_gcd.py  gcd.py  knapsack.py  largest_sub_array_sum.py  lcm.py  longest_common_subsequence.py  longest_increasing_subsequence.py  lower_bound.py  mex.py  minCoins.py  min_coins.py  upper_bound.py
fastsnake/application/: application.py  arg_parser.py  config.py  contest.py  external.py  runner.py  runner_tools.py  test_runner.py
fastsnake/structures/: b_tree.py
fastsnake/templates/: solution.cpp  solution.py  test_generator.py
fastsnake/util/: atcoder.py  codeforces.py  compiler.py  step_counter.py
tests/: conftest.py
tests/test_algorithms/: test_binary_search.py  test_knapsack.py  test_longest_common_subsequence.py  test_longest_increasing_subsequence.py  test_lower_bound.py  test_mex.py  test_min_coins.py  test_upper_bound.py
tests/test_application/: contest.json  test_runner.py
tests/test_atcoder_tools/: test_atcoder_problem_loader.py
tests/test_atcoder_tools/sample_abc341_E/: 0.in  1.in
tests/test_codeforces_tools/: test_codeforces_problem_loader.py  test_problem_loader.py
tests/test_codeforces_tools/sample_1949_J/: 0.in  0.out  1.in
tests/test_compiler/: sample.py  test_compiler.py
tests/test_step_counter/: sample.py  test_counter.py
tests/test_structures/: test_b_tree.py
(+18 files in other folders)
